Update project files and images

--- a/pages/goods.html
+++ b/pages/goods.html
@@ -18,19 +18,19 @@
 </div>
 <div id="content">
 <div class="product-card">
-<img src="../images/goods1.jpg" alt="Товар 1" width="200" height="200">
-<h3>Товар 1</h3>
-<p>Цена: 1000 руб.</p>
-</div>
-<div class="product-card">
-<img src="../images/goods2.jpg" alt="Товар 2" width="200" height="200">
-<h3>Товар 2</h3>
-<p>Цена: 2000 руб.</p>
-</div>
-<div class="product-card">
-<img src="../images/goods3.jpg" alt="Товар 3" width="200" height="200">
-<h3>Товар 3</h3>
+<img src="../images/Kalyan.jpeg" alt="Кальян" width="200" height="200">
+<h3>Кальян</h3>
 <p>Цена: 3000 руб.</p>
+</div>
+<div class="product-card">
+<img src="../images/zhvetoshka.jpeg" alt="Цветошка" width="200" height="200">
+<h3>Цветошка</h3>
+<p>Цена: 800 руб.</p>
+</div>
+<div class="product-card">
+<img src="../images/BoxingGloves.jpeg" alt="Перчатки для бокса" width="200" height="200">
+<h3>Перчатки для бокса</h3>
+<p>Цена: 2000 руб.</p>
 </div>
 </div>
 <div id="footer">Футер</div>
