--- a/pages/news.html
+++ b/pages/news.html
@@ -19,18 +19,18 @@
 <div id="content">
 <div class="news-block">
 <h2>Новость 1</h2>
-<p>Дата: 2023-10-01, Автор: Админ</p>
-<p>Текст первой новости. Здесь описывается важное событие.</p>
+<p>Дата: 2023-10-01, Автор: Danchik</p>
+<p>Кальян четкий</p>
 </div>
 <div class="news-block">
 <h2>Новость 2</h2>
-<p>Дата: 2023-10-02, Автор: Админ</p>
-<p>Текст второй новости. Продолжение интересных новостей.</p>
+<p>Дата: 2023-10-02, Автор: Чебупес</p>
+<p>Перчатки ваще зачет, чубаку с района только так заспаринговал</p>
 </div>
 <div class="news-block">
 <h2>Новость 3</h2>
-<p>Дата: 2023-10-03, Автор: Админ</p>
-<p>Текст третьей новости. Завершаем серию новостей.</p>
+<p>Дата: 2023-10-03, Автор: Иван</p>
+<p>Играть бравл статс бесплатно скачат</p>
 </div>
 </div>
 <div id="footer">Футер</div>
