Add CSS styles and update HTML structure

--- a/pages/practices.html
+++ b/pages/practices.html
@@ -4,21 +4,35 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Практики</title>
+<link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-<div id="header">Хэдер</div>
-<div id="menu">
-<ul>
-<li><a href="../index.html">Главная</a></li>
-<li><a href="news.html">Новости</a></li>
-<li><a href="practices.html">Практики</a></li>
-<li><a href="goods.html">Товары</a></li>
-<li><a href="contacts.html">Контакты</a></li>
+<div class="page-container">
+<div class="header">Хэдер</div>
+<div class="nav">
+<ul class="nav-list">
+<li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+<li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+<li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+<li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+<li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
 </ul>
 </div>
-<div id="content">
-<p>Страница практик</p>
+<div class="content">
+<h1 class="page-title">Практики</h1>
+<div class="practices-info">
+<p>Здесь размещена информация о практических работах и проектах.</p>
+<div class="practice-card">
+<h3>Практика 1: Веб-разработка</h3>
+<p>Изучение HTML, CSS и JavaScript для создания интерактивных веб-сайтов.</p>
 </div>
-<div id="footer">Футер</div>
+<div class="practice-card">
+<h3>Практика 2: Базы данных</h3>
+<p>Работа с SQL и NoSQL базами данных для хранения и управления данными.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="footer">Футер</div>
 </body>
 </html>
