--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,23 +4,29 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Контакты</title>
+<link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-<div id="header">Хэдер</div>
-<div id="menu">
-<ul>
-<li><a href="../index.html">Главная</a></li>
-<li><a href="news.html">Новости</a></li>
-<li><a href="practices.html">Практики</a></li>
-<li><a href="goods.html">Товары</a></li>
-<li><a href="contacts.html">Контакты</a></li>
+<div class="page-container">
+<div class="header">Хэдер</div>
+<div class="nav">
+<ul class="nav-list">
+<li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+<li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+<li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+<li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+<li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
 </ul>
 </div>
-<div id="content">
+<div class="content">
+<h1 class="page-title">Контакты</h1>
+<div class="contact-info">
 <p>Email: example@example.com</p>
 <p>Адрес: Москва, ул. Примерная, 1</p>
 <button>Позвоните мне</button>
 </div>
-<div id="footer">Футер</div>
+</div>
+</div>
+<div class="footer">Футер</div>
 </body>
 </html>
