--- a/pages/goods.html
+++ b/pages/goods.html
@@ -4,35 +4,41 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Товары</title>
+<link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-<div id="header">Хэдер</div>
-<div id="menu">
-<ul>
-<li><a href="../index.html">Главная</a></li>
-<li><a href="news.html">Новости</a></li>
-<li><a href="practices.html">Практики</a></li>
-<li><a href="goods.html">Товары</a></li>
-<li><a href="contacts.html">Контакты</a></li>
+<div class="page-container">
+<div class="header">Хэдер</div>
+<div class="nav">
+<ul class="nav-list">
+<li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+<li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+<li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+<li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+<li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
 </ul>
 </div>
-<div id="content">
+<div class="content">
+<h1 class="page-title">Товары</h1>
+<div class="goods-container">
 <div class="product-card">
-<img src="../images/Kalyan.jpeg" alt="Кальян" width="200" height="200">
+<img src="../images/Kalyan.jpeg" alt="Кальян">
 <h3>Кальян</h3>
 <p>Цена: 3000 руб.</p>
 </div>
 <div class="product-card">
-<img src="../images/zhvetoshka.jpeg" alt="Цветошка" width="200" height="200">
+<img src="../images/zhvetoshka.jpeg" alt="Цветошка">
 <h3>Цветошка</h3>
 <p>Цена: 800 руб.</p>
 </div>
 <div class="product-card">
-<img src="../images/BoxingGloves.jpeg" alt="Перчатки для бокса" width="200" height="200">
+<img src="../images/BoxingGloves.jpeg" alt="Перчатки для бокса">
 <h3>Перчатки для бокса</h3>
 <p>Цена: 2000 руб.</p>
 </div>
 </div>
-<div id="footer">Футер</div>
+</div>
+</div>
+<div class="footer">Футер</div>
 </body>
 </html>
