--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Контакты</title>
-<link rel="stylesheet" href="../style/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Контакты</title>
+  <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-<div class="page-container">
-<div class="header">Хэдер</div>
-<div class="nav">
-<ul class="nav-list">
-<li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-<li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-<li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-<li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-<li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-</ul>
-</div>
-<div class="content">
-<h1 class="page-title">Контакты</h1>
-<div class="contact-info">
-<p>Email: example@example.com</p>
-<p>Адрес: Москва, ул. Примерная, 1</p>
-<button>Позвоните мне</button>
-</div>
-</div>
-</div>
-<div class="footer">Футер</div>
+  <div class="page-container">
+    <header class="header">
+      <h1>Хэдер</h1>
+    </header>
+
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+        <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+        <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+        <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+        <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+      </ul>
+    </nav>
+
+    <main class="content">
+      <h1 class="page-title">Контакты</h1>
+      <section class="contact-info">
+        <p>Email: example@example.com</p>
+        <p>Адрес: Москва, ул. Примерная, 1</p>
+        <button>Позвоните мне</button>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>Футер</p>
+    </footer>
+  </div>
 </body>
 </html>
