--- a/pages/goods.html
+++ b/pages/goods.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Товары</title>
-<link rel="stylesheet" href="../style/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Товары</title>
+  <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-<div class="page-container">
-<div class="header">Хэдер</div>
-<div class="nav">
-<ul class="nav-list">
-<li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-<li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-<li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-<li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-<li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-</ul>
-</div>
-<div class="content">
-<h1 class="page-title">Товары</h1>
-<div class="goods-container">
-<div class="product-card">
-<img src="../images/Kalyan.jpeg" alt="Кальян">
-<h3>Кальян</h3>
-<p>Цена: 3000 руб.</p>
-</div>
-<div class="product-card">
-<img src="../images/zhvetoshka.jpeg" alt="Цветошка">
-<h3>Цветошка</h3>
-<p>Цена: 800 руб.</p>
-</div>
-<div class="product-card">
-<img src="../images/BoxingGloves.jpeg" alt="Перчатки для бокса">
-<h3>Перчатки для бокса</h3>
-<p>Цена: 2000 руб.</p>
-</div>
-</div>
-</div>
-</div>
-<div class="footer">Футер</div>
+  <div class="page-container">
+    <header class="header">
+      <h1>Хэдер</h1>
+    </header>
+
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+        <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+        <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+        <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+        <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+      </ul>
+    </nav>
+
+    <main class="content">
+      <h1 class="page-title">Товары</h1>
+      <section class="goods-container">
+        <article class="product-card">
+          <img src="../images/Kalyan.jpeg" alt="Кальян">
+          <h3>Кальян</h3>
+          <p>Цена: 3000 руб.</p>
+        </article>
+        <article class="product-card">
+          <img src="../images/zhvetoshka.jpeg" alt="Цветошка">
+          <h3>Цветошка</h3>
+          <p>Цена: 800 руб.</p>
+        </article>
+        <article class="product-card">
+          <img src="../images/BoxingGloves.jpeg" alt="Перчатки для бокса">
+          <h3>Перчатки для бокса</h3>
+          <p>Цена: 2000 руб.</p>
+        </article>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>Футер</p>
+    </footer>
+  </div>
 </body>
 </html>
