--- a/pages/news.html
+++ b/pages/news.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Новости</title>
-<link rel="stylesheet" href="../style/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Новости</title>
+  <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-<div class="page-container">
-<div class="header">Хэдер</div>
-<div class="nav">
-<ul class="nav-list">
-<li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-<li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-<li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-<li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-<li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-</ul>
-</div>
-<div class="content">
-<h1 class="page-title">Новости</h1>
-<div class="news-container">
-<div class="news-card">
-<h2>Новость 1</h2>
-<p>Дата: 2023-10-01, Автор: Danchik</p>
-<p>Кальян четкий</p>
-</div>
-<div class="news-card">
-<h2>Новость 2</h2>
-<p>Дата: 2023-10-02, Автор: Чебупес</p>
-<p>Перчатки ваще зачет, чубаку с района только так заспаринговал</p>
-</div>
-<div class="news-card">
-<h2>Новость 3</h2>
-<p>Дата: 2023-10-03, Автор: Иван</p>
-<p>Играть бравл статс бесплатно скачат</p>
-</div>
-</div>
-</div>
-</div>
-<div class="footer">Футер</div>
+  <div class="page-container">
+    <header class="header">
+      <h1>Хэдер</h1>
+    </header>
+
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+        <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+        <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+        <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+        <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+      </ul>
+    </nav>
+
+    <main class="content">
+      <h1 class="page-title">Новости</h1>
+      <section class="news-container">
+        <article class="news-card">
+          <h2>Новость 1</h2>
+          <p>Дата: 2023-10-01, Автор: Danchik</p>
+          <p>Кальян четкий</p>
+        </article>
+        <article class="news-card">
+          <h2>Новость 2</h2>
+          <p>Дата: 2023-10-02, Автор: Чебупес</p>
+          <p>Перчатки ваще зачет, чубаку с района только так заспаринговал</p>
+        </article>
+        <article class="news-card">
+          <h2>Новость 3</h2>
+          <p>Дата: 2023-10-03, Автор: Иван</p>
+          <p>Играть бравл статс бесплатно скачат</p>
+        </article>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>Футер</p>
+    </footer>
+  </div>
 </body>
 </html>
