--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -24,16 +24,133 @@
 
     <main class="content">
       <h1 class="page-title">Контакты</h1>
-      <section class="contact-info">
-        <p>Email: example@example.com</p>
-        <p>Адрес: Москва, ул. Примерная, 1</p>
-        <button>Позвоните мне</button>
+
+      <section class="contacts-container">
+        <article class="contact-info">
+          <h3>Электронная почта</h3>
+          <p>Адрес электронной почты: astafev@mirea.ru</p>
+        </article>
+        <article class="contact-info">
+          <h3>Физический адрес</h3>
+          <p>Адрес: г. Москва, ул. Пушкина, д. Колотушкина</p>
+        </article>
+
+        <div class="contact-grid">
+          <div class="contact-item">
+            <h3>Телефон</h3>
+            <p>+7 (495) 123-45-67</p>
+          </div>
+          <div class="contact-item">
+            <h3>Время работы</h3>
+            <p>Пн-Пт: 9:00-18:00</p>
+          </div>
+          <div class="contact-item">
+            <h3>Социальные сети</h3>
+            <p>VK, Telegram, WhatsApp</p>
+          </div>
+        </div>
+
+        <!-- Кнопка для открытия модального окна -->
+        <button class="contact-button" onclick="contactModal.showModal()">Связаться с нами</button>
       </section>
     </main>
 
     <footer class="footer">
-      <p>Футер</p>
+      <p>© 2024 Все права защищены. Контактная информация</p>
     </footer>
   </div>
+
+  <!-- Модальное окно для формы обратной связи -->
+  <dialog id="contactModal">
+    <div class="modal-header">
+      <h2>Форма обратной связи</h2>
+    </div>
+    <div class="modal-content">
+      <form id="feedbackForm" method="dialog">
+        <div class="form-group">
+          <label for="name">Имя <span class="required">*</span></label>
+          <input type="text" id="name" name="name" required placeholder="Введите ваше имя">
+        </div>
+
+        <div class="form-group">
+          <label for="phone">Телефон <span class="required">*</span></label>
+          <input type="tel" id="phone" name="phone" required placeholder="+7 (XXX) XXX-XX-XX">
+        </div>
+
+        <div class="form-group">
+          <label for="email">Электронная почта <span class="required">*</span></label>
+          <input type="email" id="email" name="email" required placeholder="example@mail.ru">
+        </div>
+
+        <div class="form-group">
+          <label for="category">Категория обращения <span class="required">*</span></label>
+          <select id="category" name="category" required>
+            <option value="">Выберите категорию</option>
+            <option value="technical">Техническая поддержка</option>
+            <option value="commercial">Коммерческое предложение</option>
+            <option value="cooperation">Сотрудничество</option>
+            <option value="complaint">Жалоба</option>
+            <option value="suggestion">Предложение</option>
+            <option value="other">Другое</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label for="message">Текст обращения <span class="required">*</span></label>
+          <textarea id="message" name="message" required placeholder="Опишите вашу проблему или вопрос..."></textarea>
+        </div>
+
+        <div class="modal-actions">
+          <button type="submit" class="btn btn-secondary">Отмена</button>
+          <button type="button" class="btn btn-primary" onclick="submitForm()">Отправить</button>
+        </div>
+      </form>
+    </div>
+  </dialog>
+
+  <script>
+    // Функция для отправки формы
+    function submitForm() {
+      const form = document.getElementById('feedbackForm');
+      const formData = new FormData(form);
+
+      // Простая валидация
+      if (!form.checkValidity()) {
+        form.reportValidity();
+        return;
+      }
+
+      // Собираем данные формы
+      const data = {
+        name: formData.get('name'),
+        phone: formData.get('phone'),
+        email: formData.get('email'),
+        category: formData.get('category'),
+        message: formData.get('message')
+      };
+
+      // Имитация отправки
+      console.log('Данные формы:', data);
+      alert('Спасибо! Ваше обращение отправлено. Мы свяжемся с вами в ближайшее время.');
+
+      // Закрываем модальное окно
+      contactModal.close();
+      form.reset();
+    }
+
+    // Закрытие модального окна по клику на фон диалога
+    document.getElementById('contactModal').addEventListener('click', function(event) {
+      if (event.target === this) {
+        this.close();
+      }
+    });
+
+    // Блокируем отправку формы по Enter (кроме textarea)
+    document.getElementById('feedbackForm').addEventListener('keypress', function(event) {
+      if (event.key === 'Enter' && event.target.type !== 'textarea') {
+        event.preventDefault();
+      }
+    });
+  </script>
 </body>
 </html>
